# DexTerm

./: README.md  pyproject.toml
src/dexterm/: __init__.py  __main__.py  main.py
src/dexterm/cli/: glucose.py  main.py  settings.py
src/dexterm/clients/: client.py
src/dexterm/core/: config.py  data.py  dexcom_client.py  settings.py
src/dexterm/utils/: yaml_utils.py
