[project]
name = "dexterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "huwilerb", email = "github@blaisehuwiler.ch" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
