[project]
name = "dexterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "huwilerb", email = "github@blaisehuwiler.ch" }]
requires-python = ">=3.9"
dependencies = ["pydexcom>=0.4.1", "typer>=0.15.1"]

[project.scripts]
dexterm = "dexterm.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
