[project]
name = "dexterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "huwilerb", email = "github@blaisehuwiler.ch" }]
requires-python = ">=3.9"
dependencies = [
    "platformdirs>=4.3.6",
    "pydexcom>=0.4.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.scripts]
dexterm = "dexterm.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
